fix bug: too long for show 习近平新时代中国特色社会主义 in title

--- a/css/main.css
+++ b/css/main.css
@@ -920,3 +920,13 @@ video {
     text-overflow:ellipsis;
     white-space: nowrap;
 }
+
+.winTitle{
+    line-height:26px;
+    width: 60%;
+    text-align:center;
+    display:inline-block;
+    overflow: hidden;
+    text-overflow:ellipsis;
+    white-space: nowrap;
+}
